# store-tui

./: .gitignore  CMakeLists.txt  CONCEPTS.md  README.md  SETUP.md  build.ps1  design_doc.md
src/: Item.h  Store.cpp  Store.h  UI.cpp  UI.h  main.cpp
